# fast-feet

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: auth-unit-tests.yml  courier-unit-tests.yml  order-unit-tests.yml  recipient-unit-tests.yml
auth-api/: package-lock.json
courier-api/: .swcrc  README.md  nest-cli.json  package-lock.json  package.json  tsconfig.json
courier-api/prisma/: schema.prisma
courier-api/src/: app.module.ts  main.ts
courier-api/src/core/: entity.ts  unique-entity-id.ts
courier-api/src/error-handler/: error-handler.interceptor.ts
courier-api/test/factories/: makeCourier.ts
courier-api/test/repositories/: in-memory-couriers.repository.ts  in-memory-orders.repository.ts
order-api/: package-lock.json  package.json  tsconfig.json
order-api/prisma/: schema.prisma
order-api/src/: app.module.ts  main.ts
order-api/src/core/: pagination-params.ts
order-api/src/error-handler/: error-handler.interceptor.ts
recipient-api/: package-lock.json  package.json  tsconfig.json
recipient-api/prisma/: schema.prisma
recipient-api/src/: app.module.ts  main.ts
recipient-api/test/: setup-e2e.ts
user-api/: .gitignore  pyproject.toml
user-api/tests/: test_create_user.py
user-api/tests/repositories/: in_memory_user_repository.py
user-api/user_api/: main.py
user-api/user_api/domain/dtos/: user.py
user-api/user_api/domain/models/: user.py
user-api/user_api/domain/repositories/: user_repository.py
user-api/user_api/domain/use_cases/: create_user.py
user-api/user_api/infra/routers/: user_router.py
(+100 files in other folders)
